# admission-analytics

./: .gitignore  README.md  analysis_applicants_outflow.ipynb  not_admitted_applicants_analysis.ipynb  pyproject.toml  test_applicants_analysis.ipynb  tyuiu_applicants.py
